<resources>
    <string name="app_name">KB Randomizer</string>
    <string name="action_settings">Settings</string>
    <string name="base_game">Base Game</string>
    <string name="nomads">Nomads</string>
    <string name="crossroads">Crossroads</string>
    <string name="capitols">Capitols</string>
    <string name="caves">Caves</string>
    <string name="island">Island</string>
    <string name="use_with_assigned_board">Use With Assigned Board</string>
    <string name="always_use">Always Use</string>
    <string name="initialized">Initialized</string>
    <string name="current_configuration">Current Configuration</string>
    <string name="harvest">Harvest</string>
    <string name="marshlands">Marshlands</string>
    <string name="action_randomizer">Randomizer</string>
    <string name="action_about">About</string>
    <string name="toggle_expansions">Toggle Expansions:</string>
    <string name="toggle_promos">Toggle Promos:</string>
    <string name="promo_options">Promo Options:</string>
</resources>
